tests/must_not_compile/append3.stderr
error[E0271]: type mismatch resolving `<B as type_inequality::Compare<B>>::EQUAL == false`
  --> tests/must_not_compile/append3.rs:20:22
   |
20 |     let _: Coproduct<C> = coproduct::inject(A);
   |                      ^ expected `true`, found `false`
   |
   = note: expected constant `true`
              found constant `false`
   = note: required for `B` to implement `NotEqual<B>`
   = note: required for `coproduct::Union<B, EmptyUnion>` to implement `merge::DoesNotContain<B>`
   = note: 1 redundant requirement hidden
   = note: required for `coproduct::Union<A, coproduct::Union<B, EmptyUnion>>` to implement `merge::DoesNotContain<B>`
   = note: required for `coproduct::Union<A, coproduct::Union<B, EmptyUnion>>` to implement `Append<B, coproduct::merge::NotPresent>`
